# Recruiter

./: README.md
42sh/: .gitignore  Makefile.am  README-CODEREVIEW.md  README-STANDARDS.md  README.md  configure.ac
42sh/src/: 42sh.c  Makefile.am  main_loop.c  main_loop.h
42sh/src/ast/: Makefile.am  ast.c  ast.h
42sh/src/execution/: Makefile.am  exec_and_or.c  exec_and_or.h  exec_assignement_word.c  exec_assignement_word.h  exec_command.c  exec_command.h  exec_command_block.c  exec_command_block.h  exec_compound_list.c  exec_compound_list.h  exec_element.c  exec_element.h  exec_else_clause.c  exec_else_clause.h  exec_for.c  exec_for.h  exec_funcdec.c  exec_funcdec.h  exec_if.c  exec_if.h  exec_ionumber.c  exec_ionumber.h  exec_list.c  exec_list.h  exec_not.c  exec_not.h  exec_pipeline.c  exec_pipeline.h  exec_prefix.c  exec_prefix.h  exec_redirection.c  exec_redirection.h  exec_rule_case.c  exec_rule_case.h  exec_shell_command.c  exec_shell_command.h  exec_simple_command.c  exec_simple_command.h  exec_subshell.c  (+8 more)
42sh/src/execution/builtins/: cd.c  cd.h  dot.c  dot.h  echo.c  echo.h  exit.c  exit.h  export.c  export.h  false.c  false.h  loop_interupt.c  loop_interupt.h  true.c  true.h  unset.c  unset.h
42sh/src/expansion/: Makefile.am  expand_backslash.c  expand_backslash.h  expand_double_quotes.c  expand_double_quotes.h  expand_quote.c  expand_quote.h  expand_variable.c  expand_variable.h  expand_word.c  expand_word.h  expansion.c  expansion.h  field_splitting.c  field_splitting.h  quote_removal.c  quote_removal.h  variables.c  variables.h
42sh/src/io/: Makefile.am  io.c  io.h
42sh/src/lexer/: Makefile.am  lexer.c  lexer.h  token.c  token.h
42sh/src/options/: Makefile.am  pretty_printer.c  pretty_printer.h  verbose.c  verbose.h
42sh/src/parser/: Makefile.am  parse_and_or.c  parse_and_or.h  parse_case.c  parse_case.h  parse_case_clause.c  parse_case_clause.h  parse_case_item.c  parse_case_item.h  parse_command.c  parse_command.h  parse_compound_list.c  parse_compound_list.h  parse_element.c  parse_element.h  parse_else.c  parse_else.h  parse_for.c  parse_for.h  parse_funcdec.c  parse_funcdec.h  parse_if.c  parse_if.h  parse_input.c  parse_input.h  parse_list.c  parse_list.h  parse_pipeline.c  parse_pipeline.h  parse_prefix.c  parse_prefix.h  parse_redirection.c  parse_redirection.h  parse_shell_command.c  parse_shell_command.h  parse_simple_command.c  parse_simple_command.h  parse_until.c  parse_until.h  parse_while.c  (+2 more)
42sh/src/utils/: Makefile.am
42sh/src/utils/count_children/: count_children.c  count_children.h
42sh/src/utils/hash_map/: hash_map.c  hash_map.h
42sh/src/utils/hash_map_funcdec/: hash_funcdec.c  hash_map_funcdec.c  hash_map_funcdec.h
42sh/src/utils/itoa/: itoa.c  itoa.h
42sh/src/utils/list/: list.c  list.h
42sh/src/utils/string_arrays/: string_arrays.c  string_arrays.h
42sh/tests/: Makefile.am  apply_format.py  test_conditions.txt  test_input.txt  test_quote.txt  testsuite.py
42sh/tests/categories/aliases/: alias_alias.sh  basic_alias.sh  basic_unalias.sh  func_alias.sh  unalias_unexistant_var.sh  void_alias.sh  wrong_alias.sh
42sh/tests/categories/and_or/: and_or.sh  bad_begginning_and.sh  bad_begginning_or.sh  bad_ending_and.sh  bad_ending_or.sh
42sh/tests/categories/break/: basic_break.sh
42sh/tests/categories/case_clauses/: basic_case.sh  case_empty.sh  multiple_case_clauses.sh  multiple_case_item.sh  multiple_commands.sh  no_esac.sh  no_semicolons.sh  one_semicolon.sh  to_much_semicolons.sh  variables.sh
42sh/tests/categories/command_substitution/: backquoted.sh  backquotes1.sh  backquotes2.sh  backquotes3.sh  bad_quote_sub.sh  both_notation.sh  embeeded_backquotes.sh  escape_backquote.sh  par_in_sub.sh  quotes_in_sub.sh  quotes_quotes_sub.sh  sub1.sh  sub2.sh  sub_bad_command.sh  sub_big_command.sh  sub_big_command_quoted.sh  sub_insub.sh  sub_with_spaces.sh
42sh/tests/categories/continue/: basic_continue.sh
42sh/tests/categories/export/: basic_export.sh
42sh/tests/categories/for/: for_1.sh  for_2.sh  for_3.sh  for_4.sh
42sh/tests/categories/functions/: basic_function.sh  fun_if.sh  function_with_3_parameters.sh
42sh/tests/categories/if_clauses/: bad_syntax.sh  elif.sh  hard_else.sh  if.sh  separator.sh
42sh/tests/categories/ifs/: command_sub_ifs.sh  echo_ifs.sh  ifs_comma.sh  ifs_comma_no_quot.sh  var_ifs.sh
42sh/tests/categories/loop_interupts/: loop_interupt_1.sh  loop_interupt_10.sh  loop_interupt_2.sh  loop_interupt_3.sh  loop_interupt_4.sh  loop_interupt_5.sh  loop_interupt_6.sh  loop_interupt_8.sh  loop_interupt_9.sh
42sh/tests/categories/options/: options.sh
42sh/tests/categories/pipe/: command_pipe.sh  pipe.sh
42sh/tests/categories/redirections/: redirections_1.sh  redirections_2.sh  redirections_3.sh  redirections_4.sh  redirections_6.sh  redirections_7.sh  redirections_8.sh  redirections_indir_1.sh  redirections_indir_2.sh  redirections_indir_3.sh  redirections_indir_4.sh  redirections_indir_5.sh
42sh/tests/categories/subshells/: basic_subshells.sh
42sh/tests/categories/unset/: unset.sh  unset_with_bad_options.sh  unset_with_options_f.sh  unset_with_options_v.sh
42sh/tests/categories/until/: until.sh
42sh/tests/categories/variables/: assignement_with_no_name.sh  assigning_variable_to_if.sh  echo_simple_variables.sh  (+8 more)
libzork/libzork/: CMakeLists.txt
libzork/libzork/src/: CMakeLists.txt
(+746 files in other folders)
