AC_INIT([42sh], [1.0], [arthur.courselle@epita.fr])
AM_INIT_AUTOMAKE([subdir-objects] [foreign])

AC_PROG_CC

AM_PROG_AR
AC_PROG_RANLIB

AC_CONFIG_FILES([
    Makefile
    src/Makefile
    src/parser/Makefile
    src/lexer/Makefile
    tests/Makefile
    src/io/Makefile
    src/ast/Makefile
    src/options/Makefile
    src/execution/Makefile
    src/expansion/Makefile
    src/utils/Makefile
    ])

AC_OUTPUT
