lib_LIBRARIES = libexecution.a

libexecution_a_SOURCES = \
	exec_simple_command.c \
	exec_list.c \
	exec_element.c \
	exec_pipeline.c \
	exec_and_or.c \
	exec_command.c \
	exec_word.c \
	exec_shell_command.c \
	exec_if.c \
	exec_compound_list.c \
	exec_else_clause.c \
	exec_prefix.c \
	exec_redirection.c \
	exec_ionumber.c \
	exec_not.c \
	exec_while.c \
	exec_until.c \
	exec_for.c \
	exec_assignement_word.c \
	exec_command_block.c \
	exec_funcdec.c \
	exec_subshell.c \
	exec_rule_case.c \
	builtins/cd.c \
	builtins/echo.c \
	builtins/exit.c \
	builtins/true.c \
	builtins/false.c \
	builtins/export.c \
	builtins/loop_interupt.c \
	builtins/dot.c \
	builtins/unset.c \
	exec_simple_command.h \
	exec_list.h \
	exec_element.h \
	exec_pipeline.h \
	exec_and_or.h \
	exec_command.h \
	exec_word.h \
	exec_shell_command.h \
	exec_if.h \
	exec_compound_list.h \
	exec_else_clause.h \
	exec_prefix.h \
	exec_redirection.h \
	exec_ionumber.h \
	exec_not.h \
	exec_while.h \
	exec_until.h \
	exec_for.h \
	exec_assignement_word.h \
	exec_command_block.h \
	exec_funcdec.h \
	exec_subshell.h \
	exec_rule_case.h \
	builtins/cd.h \
	builtins/echo.h \
	builtins/exit.h \
	builtins/true.h \
	builtins/false.h \
	builtins/loop_interupt.h \
	builtins/export.h \
	builtins/dot.h \
	builtins/unset.h

libexecution_a_CFLAGS = -std=c99 -pedantic -Werror -Wall -Wextra -Wvla
libexecution_a_CPPFLAGS = -I$(top_srcdir)/src
